# meridian-store

./: .gitignore  README.md  install-dev.sh
docs/: MERIDIAN_STORE_PLAN.md
generators/: gen-store-icon.py
meridian-store/: CMakeLists.txt
meridian-store/data/: org.meridian.store-tray.desktop  org.meridian.store.desktop  org.meridian.store.metainfo.xml
meridian-store/src/: alpmdb.cpp  alpmdb.h  aurbackend.cpp  aurbackend.h  catalog.cpp  catalog.h  flatpakbackend.cpp  flatpakbackend.h  main.cpp  storedaemon.cpp  storedaemon.h  trayicon.cpp  trayicon.h  updates.cpp  updates.h
meridian-store/src/qml/: AboutPage.qml  AppCard.qml  AppDetailPage.qml  AppRow.qml  AppTile.qml  AurDetailPage.qml  AurPage.qml  DiscoverLanding.qml  Main.qml  ScreenshotGallery.qml  SettingsPage.qml  UpdatesPage.qml
meridian-stored/: Cargo.toml
meridian-stored/data/: build-aur.sh  meridian-stored.service  org.meridian.Store.conf  org.meridian.Store.service  org.meridian.store.policy
meridian-stored/src/: main.rs
packaging/: PKGBUILD
